--- a/TexturedRender/packages.config
+++ b/TexturedRender/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="OpenTK" version="3.1.0" targetFramework="net461" />
-  <package id="SharpCompress" version="0.24.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="OpenTK" version="3.3.3" targetFramework="net48" />
+  <package id="SharpCompress" version="0.39.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net48" />
+  <package id="ZstdSharp.Port" version="0.8.4" targetFramework="net48" />
 </packages>
